--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="content">
             <div class="tweet-container">
-            <a href="http://twitter.com/intent/tweet/?text=I%20just%20created%20a%20new%20Java%20Spring%20application%20on%20middleware.sh&amp;hashtags=middlewareSH%2CVSTS%20%40devops%20%40VSTS">
+            <a href="http://twitter.com/intent/tweet/?text=I%20just%20created%20a%20new%20Python%20Flask%20application%20on%20middleware.sh&amp;hashtags=middlewareSH%2CVSTS%20%40devops%20%40VSTS">
                 <img src="{{ url_for('static', filename='img/tweetThis.svg') }}" />
             </a>            
         </div>
@@ -28,7 +28,7 @@
                             <div class="step-icon">
                                 <img src="{{ url_for('static', filename='img/cloneWhite.svg') }} " />
                             </div>
-                            <div class="step-text"><a href="https://github.com/middlewaresh/JavaDemo">Clone sample code repository and start developing your application</a></div>
+                            <div class="step-text"><a href="https://github.com/middlewaresh/PythonDemo">Clone sample code repository and start developing your application</a></div>
                         </div>
 
                         <div class="step">
